--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "maiker",
   "displayName": "maiker",
   "description": "AI powered coding projects generator",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "engines": {
     "vscode": "^1.77.0"
   },
@@ -54,5 +54,11 @@
     "mocha": "^10.2.0",
     "typescript": "^4.9.5",
     "@vscode/test-electron": "^2.3.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lusob/maiker.git"
+  },
+  "publisher": "lusob",
+  "icon": "./assets/icon.png"
 }
